tests/NormalTests/paczka1/small_fuzzy/67790315.err
Error in line 1: S271 S85 77,0
Error in line 2: S271 A50 98,9
Error in line 3: S271 S85 7,1
